--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
